# ObviouslyBadSoftware

./: .gitignore  LICENSE  README.md
tools/screen-recorder/: README.md  go.mod  main.go
tools/thumbnail-maker/: .gitignore  README.md  pyproject.toml  thumbnail_maker.py
tools/video-editor/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tools/video-editor/src/: App.css  App.tsx  cli.ts  index.css  state.ts  types.ts
tools/video-editor/src/components/: ExportModal.tsx  Inspector.tsx  MediaBin.tsx  Preview.tsx  Timeline.tsx  TopBar.tsx
tools/video-editor/src/export/: command.ts  ffmpeg-wasm.ts  run.ts  text.ts
tools/voice-recorder/: .gitignore  README.md  pyproject.toml  voice_recorder.py
