[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thumbnail-maker"
version = "0.1.0"
description = "CLI thumbnail generator with SalzDevs-style defaults"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
]

[tool.setuptools]
py-modules = ["thumbnail_maker"]
