[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-recorder"
version = "0.1.0"
description = "CLI voice recorder with live VU meter"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.5",
    "soundfile>=0.14",
    "numpy>=2.0",
]

[tool.setuptools]
py-modules = ["voice_recorder"]
